--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -35,8 +35,8 @@
             android:layout_marginRight="@dimen/dp_23"
             android:background="@drawable/edit_bg_layer_list"
             android:gravity="center_horizontal|left"
-            android:hint="example@gmail.com"
-            android:inputType="textEmailAddress"
+            android:hint="请输入旧密码"
+            android:inputType="textPassword"
             android:paddingLeft="@dimen/dp_10"
             android:paddingTop="@dimen/dp_10"
             android:textSize="@dimen/sp_14"
@@ -66,8 +66,8 @@
             android:layout_marginRight="@dimen/dp_23"
             android:background="@drawable/edit_bg_layer_list"
             android:gravity="center_horizontal|left"
-            android:hint="請輸入驗證碼"
-            android:inputType="text"
+            android:hint="@string/new_password22"
+            android:inputType="textPassword"
             android:paddingLeft="@dimen/dp_10"
             android:paddingTop="@dimen/dp_10"
             android:textSize="@dimen/sp_14"
@@ -97,8 +97,8 @@
             android:layout_marginRight="@dimen/dp_23"
             android:background="@drawable/edit_bg_layer_list"
             android:gravity="center_horizontal|left"
-            android:hint="請輸入驗證碼"
-            android:inputType="text"
+            android:hint="@string/new_password22"
+            android:inputType="textPassword"
             android:paddingLeft="@dimen/dp_10"
             android:paddingTop="@dimen/dp_10"
             android:textSize="@dimen/sp_14"
@@ -107,8 +107,10 @@
             app:layout_constraintTop_toBottomOf="@+id/password2" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tips_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_marginTop="@dimen/dp_11"
             android:drawablePadding="@dimen/dp_5"
